--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -7,13 +7,17 @@
         <title th:text="${titulo}">TODO supply a title</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+
+        <!-- DataTable CSS -->
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css" />
     </head>
     <body>
 
         <!-- Barra de Navegación -->
-        <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
+        <nav class="navbar navbar-expand bg-primary navbar-dark">
             <!-- Brand -->
             <a class="navbar-brand" href="#" th:text="${titulo}">Logo</a>
 
@@ -31,7 +35,7 @@
                     <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
                         Usuario
                     </a>
-                    <div class="dropdown-menu">
+                    <div class="dropdown-menu dropdown-menu-right">
                         <a class="dropdown-item" href="#">Mi Cuenta</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Salir</a>
@@ -39,11 +43,14 @@
                 </li>
             </ul>
         </nav>
-        
+
         <!-- Area que será reemplazada por contenido de otras paginas -->
-        <div layout:fragment="cuerpo">
-            <span>Contenido de las otras páginas aquí...</span>
+        <div class="container-fluid">
+            <div layout:fragment="cuerpo">
+                <span>Contenido de las otras páginas aquí...</span>
+            </div>
         </div>
+
 
         <!-- jQuery library -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -53,5 +60,12 @@
 
         <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+        <!-- DataTable JS -->
+        <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+        
+        <!-- Scripts de cada página ... -->
+        <script th:replace=":: js"></script>
+
     </body>
 </html>
