--- a/src/main/resources/templates/productos/list.html
+++ b/src/main/resources/templates/productos/list.html
@@ -10,8 +10,42 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     </head>
     <body>
-        <div layout:fragment="cuerpo">
-            <h2 th:text="${titulo}"></h2>
+        <div layout:fragment="cuerpo" >
+
+            <div class="row">
+                <div class="col-12">
+                    <div class="card mt-4">
+                        <div class="card-header">
+                            <h2 th:text="${titulo}"></h2>
+                        </div>
+                        <div class="card-body">
+                            <table id="tablaProductos" class="table table-responsive table-striped table-hover table-sm table-bordered" style="width: 100%;">
+                                <thead>
+                                    <tr>
+                                        <th>#</th>
+                                        <th>Cód. Barras</th>
+                                        <th>Descripción</th>
+                                        <th>Precio</th>
+                                        <th>stock</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr th:each="a : ${articulos}">
+                                        <td th:text="${a.id}"></td>
+                                        <td th:text="${a.codBarras}"></td>
+                                        <td th:text="${a.descripcion}"></td>
+                                        <td th:text="${a.precio}"></td>
+                                        <td th:text="${a.stock}"></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <script th:src="@{/js/productos-datatables.js}" th:fragment="js"></script>
     </body>
 </html>
+
