--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -64,6 +64,9 @@
         <!-- DataTable JS -->
         <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
         
+        <!-- Mask JS -->
+        <script src="/js/jquery.mask.min.js" type="text/javascript"></script>
+        
         <!-- Scripts de cada página ... -->
         <script th:replace=":: js"></script>
 
