--- a/src/main/resources/templates/productos/list.html
+++ b/src/main/resources/templates/productos/list.html
@@ -19,7 +19,7 @@
                             <h2 th:text="${titulo}"></h2>
                         </div>
                         <div class="card-body">
-                            <table id="tablaProductos" class="table table-responsive table-striped table-hover table-sm table-bordered" style="width: 100%;">
+                            <table id="tablaProductos" class="table table-striped table-hover table-bordered" style="width: 100%;">
                                 <thead>
                                     <tr>
                                         <th>#</th>
@@ -39,6 +39,71 @@
                                     </tr>
                                 </tbody>
                             </table>
+                            <!-- Button to Open the Modal -->
+                            <button id="btnNuevo" type="button" class="btn btn-primary" >
+                                Nuevo Producto
+                            </button>
+
+                            <!-- The Modal -->
+                            <div class="modal fade" id="myModal">
+                                <div class="modal-dialog">
+                                    <div class="modal-content">
+
+                                        <!-- Modal Header -->
+                                        <div class="modal-header">
+                                            <h4 id="tituloModal" class="modal-title">Modal Heading</h4>
+                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        </div>
+
+                                        <!-- Modal body -->
+                                        <div class="modal-body">
+                                            <form id="form" action="#">
+                                                <div class="form-row">
+                                                    <div class="col-sm-12">
+                                                        <div class="form-group">
+                                                            <label for="codBar">Cód. Barras</label>
+                                                            <input id="codBar" class="form-control" type="text" maxlength="13" 
+                                                                  data-mask="###########" />
+                                                            <div id="error-codBarras"></div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-sm-12">
+                                                        <div class="form-group">
+                                                            <label for="descripcion">Descripción</label>
+                                                            <input id="descripcion" class="form-control" type="text" />
+                                                            <div id="error-descripcion"></div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="form-row">
+                                                    <div class="col-sm-7">
+                                                        <div class="form-group">
+                                                            <label for="precio">Precio</label>
+                                                            <input id="precio" class="form-control money" type="text" 
+                                                                 placeholder="Por ej.: 9,99" />
+                                                            <div id="error-precio"></div>
+                                                        </div>
+                                                    </div>
+                                                    <div class="col-sm-5">
+                                                        <div class="form-group">
+                                                            <label for="stock">Stock</label>
+                                                            <input id="stock" class="form-control" type="text" data-mask="########" />
+                                                            <div id="error-stock"></div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </form>
+                                        </div>
+
+                                        <!-- Modal footer -->
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                                            <button id="btnGuardar" type="button" class="btn btn-primary">Guardar</button>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
