Alta de productos implementada. Mensaje personalizado.

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -67,6 +67,9 @@
         <!-- Mask JS -->
         <script src="/js/jquery.mask.min.js" type="text/javascript"></script>
         
+        <!-- Sweet Alert 2 -->
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        
         <!-- Scripts de cada página ... -->
         <script th:replace=":: js"></script>
 
