Página de error configurada. Formulario de Ventas añadido. Sin terminar.

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -11,9 +11,10 @@
     </head>
     <body>
         <div layout:fragment="cuerpo">
-            <h2 th:text="${titulo}"></h2>
+            <h2 th:text="'Ops! Ocurrió un error! Estamos laburando para emparcharlo.'"></h2>
+            <img src="/img/coqui.jpg" alt=""/>
         </div>
-        
+
         <script th:fragment="js"></script>
     </body>
 </html>
