--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -13,6 +13,10 @@
 
         <!-- DataTable CSS -->
         <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css" />
+
+        <!-- Select 2 css -->
+        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+
     </head>
     <body>
 
@@ -24,10 +28,13 @@
             <!-- Links -->
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Productos</a>
+                    <a class="nav-link" th:href="@{/home}">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Ventas</a>
+                    <a class="nav-link" th:href="@{/productos/listado}">Productos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/ventas/listado}">Ventas</a>
                 </li>
 
                 <!-- Dropdown -->
@@ -63,13 +70,16 @@
 
         <!-- DataTable JS -->
         <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
-        
+
         <!-- Mask JS -->
         <script src="/js/jquery.mask.min.js" type="text/javascript"></script>
-        
+
         <!-- Sweet Alert 2 -->
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-        
+
+        <!-- Select 2 JS -->
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
         <!-- Scripts de cada página ... -->
         <script th:replace=":: js"></script>
 
